--- a/src/pages/banner.html
+++ b/src/pages/banner.html
@@ -4,6 +4,6 @@
       <span class="banner__title">Оксфорд 1950</span>
       <span class="banner__subtitle">Новая коллекция изысканных кресел</span>
     </h3>
-    <button class="btn-reset btn-revert banner__btn">Ознакомиться</button>
+    <button aria-label="Ознакомиться" class="btn-reset btn-revert banner__btn">Ознакомиться</button>
   </div>
 </section>
