--- a/src/pages/callback.html
+++ b/src/pages/callback.html
@@ -6,19 +6,19 @@
         <p class="callback__subtitle">
           Безусловно, новая модель организационной деятельности в&nbsp;значительной степени
           обусловливает важность распределения внутренних резервов и&nbsp;ресурсов.
+          <svg id="tool" width="14px" height="14px" class="callback__tooltip">
+            <use xlink:href="images/sprite.svg#tooltip"></use>
+          </svg>
         </p>
-        <svg id="tool" width="14px" height="14px" class="callback__tooltip">
-          <use xlink:href="images/sprite.svg#tooltip"></use>
-        </svg>
       </div>
-      <form id="callback-form" action="POST" class="callback-form">
+      <form id="callback-form" class="callback-form form-states">
         <label for="callback-name" class="callback-form__label">
           <input
             id="callback-name"
             name="callback-name"
             type="text"
             placeholder="Как вас зовут?"
-            class="callback-form__input"
+            class="callback-form__input input-states"
           />
         </label>
         <label for="callback-phone" class="callback-form__label">
@@ -27,19 +27,21 @@
             name="callback-phone"
             type="tel"
             placeholder="Ваш телефон"
-            class="callback-form__input"
+            class="callback-form__input input-states"
           />
         </label>
         <label for="callback-email" class="callback-form__label">
           <input
             id="callback-email"
             name="callback-email"
-            type="callback-email"
+            type="email"
             placeholder="Ваш e-mail"
-            class="callback-form__input"
+            class="callback-form__input input-states"
           />
         </label>
-        <button class="btn-reset btn-revert callback-form__btn">Отправить</button>
+        <button aria-label="Отправить" class="btn-reset btn-revert callback-form__btn">
+          Отправить
+        </button>
         <label for="callback-check" class="callback-form__label-check">
           <input
             id="callback-check"
@@ -48,8 +50,8 @@
             class="callback-form__input-check"
           />
           <span class="callback-form__check-span"></span>
-          Принимаю
-          <a href="#" target="_blank" class="callback-form__link">Пользовательское соглашение</a>
+          <span class="callback-form__text">Принимаю&nbsp;</span>
+          <a href="#" target="_blank" class="callback-form__link">пользовательское соглашение</a>
         </label>
       </form>
     </div>
@@ -58,6 +60,15 @@
       <img
         loading="lazy"
         src="images/callback.png"
+        alt="3d модель интерьера"
+        class="image callback__img"
+      />
+    </picture>
+    <picture class="callback__picture-2">
+      <source srcset="images/callback_2.webp" type="image/webp" />
+      <img
+        loading="lazy"
+        src="images/callback_2.png"
         alt="3d модель интерьера"
         class="image callback__img"
       />
