--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -1,6 +1,6 @@
-<header class="header section-offset">
+<header class="header">
   <div class="header__top">
-    <div class="container grid">
+    <div class="container">
       <div class="header__top-left">
         <div class="select-city">
           <span class="select-city__region">Ваш регион:</span>
@@ -11,105 +11,169 @@
             <option value="4">Пермь</option>
           </select>
         </div>
-        <div class="header__phone">
+        <div tabindex="0" class="header__phone">
           <svg width="22px" height="22px" class="header__phone-icon">
             <use xlink:href="images/sprite.svg#phone"></use>
           </svg>
-          <a href="tel:+79958854547" class="header__phone-link">+7 (495) 885-45-47</a>
+          <a
+            tabindex="-1"
+            href="tel:+79958854547"
+            aria-label="Телефонный номер"
+            class="header__phone-link"
+            >+7 (495) 885-45-47</a
+          >
         </div>
       </div>
-      <ul class="info header__info">
-        <li class="info__item">
-          <a href="" class="info__link">О&nbsp;компании</a>
-        </li>
-        <li class="info__item">
-          <a href="" class="info__link">Гарантия и&nbsp;возврат</a>
-        </li>
-        <li class="info__item">
-          <a href="" class="info__link">Корпоративным клиентам</a>
-        </li>
-        <li class="info__item">
-          <a href="" class="info__link">Дизайн-решение</a>
-        </li>
-      </ul>
+      <div class="header__info-and-btns">
+        <ul class="info header__info">
+          <li class="info__item">
+            <a href="#" aria-label="О компании" class="info__link link-state">О&nbsp;компании</a>
+          </li>
+          <li class="info__item">
+            <a href="#" aria-label="Гарантия и возраст" class="info__link link-state"
+              >Гарантия и&nbsp;возврат</a
+            >
+          </li>
+          <li class="info__item">
+            <a href="#" aria-label="Корпоративным клиентам" class="info__link link-state"
+              >Корпоративным клиентам</a
+            >
+          </li>
+          <li class="info__item">
+            <a href="#" aria-label="Дизайн-решение" class="info__link link-state">Дизайн-решение</a>
+          </li>
+        </ul>
+        <div id="header-btns-1" class="header__btns">
+          <button aria-label="Войти в учетную запись" class="btn-reset header__user">
+            <svg width="26px" height="28px" class="header__user-icon">
+              <use xlink:href="images/sprite.svg#user"></use>
+            </svg>
+          </button>
+          <button aria-label="Корзина" class="header__basket">
+            <span class="header__basket-counter">0</span>
+            <svg width="30px" height="28px" class="header__basket">
+              <use xlink:href="images/sprite.svg#basket"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 
   <div class="header__bottom">
     <div class="container grid">
+      <button id="js-burger" aria-controls="nav" class="burger">
+        <span class="burger__span"></span>
+        <span class="burger__span"></span>
+        <span class="burger__span"></span>
+      </button>
       <div class="logo header__logo">
-        <svg width="37px" height="27px" class="logo__elephant header__logo-elephant">
-          <use xlink:href="images/sprite.svg#logo-elephant"></use>
-        </svg>
-        <svg width="140px" height="27px" class="logo__text header__logo-text">
-          <use xlink:href="images/sprite.svg#logo-text"></use>
-        </svg>
+        <a href="/" aria-label="Логотип. Перейти на главную" class="logo__link">
+          <svg width="37px" height="27px" class="logo__elephant header__logo-elephant">
+            <use xlink:href="images/sprite.svg#logo-elephant"></use>
+          </svg>
+          <svg width="140px" height="27px" class="logo__text header__logo-text">
+            <use xlink:href="images/sprite.svg#logo-text"></use>
+          </svg>
+        </a>
       </div>
-      <nav class="nav">
+      <nav id="nav" class="nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="" class="nav__link">Каталог</a>
+            <a href="catalog.html" aria-label="Каталог" class="nav__link">Каталог</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Магазины</a>
+            <a href="#" aria-label="Магазины" class="nav__link">Магазины</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Шоу-рум</a>
+            <a href="#" aria-label="Шоу-рум" class="nav__link">Шоу-рум</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Доставка и&nbsp;оплата</a>
+            <a href="#" aria-label="Доставка" class="nav__link">Доставка и&nbsp;оплата</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Дисконт</a>
+            <a href="#" aria-label="Дисконт" class="nav__link">Дисконт</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Контакты</a>
+            <a href="#" aria-label="Контакты" class="nav__link">Контакты</a>
+          </li>
+        </ul>
+        <ul class="info info-menu header__info">
+          <li class="info__item">
+            <a href="#" aria-label="О компании" class="info__link">О&nbsp;компании</a>
+          </li>
+          <li class="info__item">
+            <a href="#" aria-label="Гарантия" class="info__link">Гарантия и&nbsp;возврат</a>
+          </li>
+          <li class="info__item">
+            <a href="#" aria-label="Корпоративным клиентам" class="info__link"
+              >Корпоративным клиентам</a
+            >
+          </li>
+          <li class="info__item">
+            <a href="#" aria-label="Дазиайн-решение" class="info__link">Дизайн-решение</a>
           </li>
         </ul>
       </nav>
       <div class="header__search-and-select">
-        <form action="" class="form-header header__form">
+        <form aria-label="Форма" tabindex="0" class="form-header header__form">
           <label for="header-search" class="form-header__label">
-            <svg width="20px" height="20px" class="form-header__search-icon">
-              <use xlink:href="images/sprite.svg#search"></use>
-            </svg>
             <input
               id="header-search"
               type="text"
               placeholder="Я хочу купить..."
               class="form-header__input"
             />
+            <svg width="20px" height="20px" class="form-header__search-icon">
+              <use xlink:href="images/sprite.svg#search"></use>
+            </svg>
           </label>
-          <button class="btn-reset form-header__btn">
-            <svg width="32px" height="32px" class="form-header__arrow">
-              <use xlink:href="images/sprite.svg#search-arrow"></use>
+          <button aria-label="Начать поиск" class="btn-reset form-header__btn">
+            <svg
+              width="32"
+              height="32"
+              viewbox="0 0 32 32"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="form-header__arrow"
+            >
+              <g clip-path="url(#clip0_56504_2194)">
+                <path
+                  id="search-arrow"
+                  d="M14 11L19 16L14 21"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <circle cx="16" cy="16" r="15" stroke="#A65CF0" stroke-width="2" />
+              </g>
             </svg>
           </button>
         </form>
-        <div class="select-category">
+        <div id="select-category-wrapper" class="select-category">
           <select name="город" id="select-category" class="select select-category__select">
             <option value="1">Категория</option>
             <option value="2">Диваны</option>
-            <option value="3">Кресла</option>
-            <option value="4">Пуфы</option>
-            <option value="5">Кровати</option>
-            <option value="6">Тумбы</option>
-            <option value="7">Комоды</option>
-            <option value="8">Стулья</option>
-            <option value="9">Столы</option>
-            <option value="10">Аксессуары</option>
+            <option value="3">Комоды</option>
+            <option value="4">Кресла</option>
+            <option value="5">Стулья</option>
+            <option value="6">Пуфы</option>
+            <option value="7">Столы</option>
+            <option value="8">Кровати</option>
+            <option value="9">Аксессуары</option>
+            <option value="10">Тумбы</option>
           </select>
         </div>
       </div>
-      <div class="header__btns">
-        <button class="btn-reset header__user">
+      <div id="header-btns-2" class="header__btns">
+        <button aria-label="Войти в учетную запись" class="btn-reset header__user">
           <svg width="26px" height="28px" class="header__user-icon">
             <use xlink:href="images/sprite.svg#user"></use>
           </svg>
         </button>
-        <button class="header__basket">
+        <button aria-label="Корзина" class="header__basket">
           <span class="header__basket-counter">0</span>
-          <svg width="30px" height="28px" class="header__basket">
+          <svg width="30px" height="28px" class="header__basket-icon">
             <use xlink:href="images/sprite.svg#basket"></use>
           </svg>
         </button>
