--- a/src/pages/rating.html
+++ b/src/pages/rating.html
@@ -1,14 +1,14 @@
-<section class="rating section-offset">
+<section class="top-rating section-offset">
   <div class="container">
-    <h2 class="title-h2 rating__title">Высокий рейтинг</h2>
-    <div class="rating__content">
-      <ul class="products">
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+    <h2 class="title-h2 top-rating__title">Высокий рейтинг</h2>
+    <div class="top-rating__content">
+      <div class="products">
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">5,0</p>
+            <p class="rating__point">5,0</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -26,14 +26,16 @@
             <span class="product-card__model">“R-94”</span>
           </div>
           <span class="product-card__price">94&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,9</p>
+            <p class="rating__point">4,9</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -51,14 +53,17 @@
             <span class="product-card__model">“T-75”</span>
           </div>
           <span class="product-card__price">69&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,8</p>
+            <p class="rating__point">4,8</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -76,14 +81,17 @@
             <span class="product-card__model">“D-31”</span>
           </div>
           <span class="product-card__price">28&nbsp;490 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,8</p>
+            <p class="rating__point">4,8</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -101,14 +109,17 @@
             <span class="product-card__model">“Y-68”</span>
           </div>
           <span class="product-card__price">22&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,8</p>
+            <p class="rating__point">4,8</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -126,14 +137,17 @@
             <span class="product-card__model">“W-95”</span>
           </div>
           <span class="product-card__price">22&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,8</p>
+            <p class="rating__point">4,8</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -151,14 +165,17 @@
             <span class="product-card__model">“G-41”</span>
           </div>
           <span class="product-card__price">17&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,8</p>
+            <p class="rating__point">4,8</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -176,14 +193,17 @@
             <span class="product-card__model">“V-43”</span>
           </div>
           <span class="product-card__price">19&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,7</p>
+            <p class="rating__point">4,7</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -201,15 +221,17 @@
             <span class="product-card__model">“S-99”</span>
           </div>
           <span class="product-card__price">19&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
 
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,6</p>
+            <p class="rating__point">4,6</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -227,15 +249,17 @@
             <span class="product-card__model">“H-64”</span>
           </div>
           <span class="product-card__price">25&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
 
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,6</p>
+            <p class="rating__point">4,6</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -253,15 +277,17 @@
             <span class="product-card__model">“H-58”</span>
           </div>
           <span class="product-card__price">19&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
 
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,6</p>
+            <p class="rating__point">4,6</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -279,15 +305,17 @@
             <span class="product-card__model">“R-43”</span>
           </div>
           <span class="product-card__price">33&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
 
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,6</p>
+            <p class="rating__point">4,6</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -305,15 +333,17 @@
             <span class="product-card__model">“С-42”</span>
           </div>
           <span class="product-card__price">18&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
 
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,6</p>
+            <p class="rating__point">4,6</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -331,15 +361,17 @@
             <span class="product-card__model">“U-58”</span>
           </div>
           <span class="product-card__price">21&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
 
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,5</p>
+            <p class="rating__point">4,5</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -357,15 +389,17 @@
             <span class="product-card__model">“F-41”</span>
           </div>
           <span class="product-card__price">17&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
 
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,5</p>
+            <p class="rating__point">4,5</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -383,15 +417,17 @@
             <span class="product-card__model">“R-85”</span>
           </div>
           <span class="product-card__price">34&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
 
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,5</p>
+            <p class="rating__point">4,5</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -409,15 +445,17 @@
             <span class="product-card__model">“S-44”</span>
           </div>
           <span class="product-card__price">19&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
 
-        <li class="product-card">
-          <div class="product-card__rating">
-            <svg width="15px" height="15px" class="product-card__icon">
+        <div class="product-card">
+          <div class="rating">
+            <svg width="15px" height="15px" class="rating__icon">
               <use xlink:href="images/sprite.svg#star"></use>
             </svg>
-            <p class="product-card__point">4,5</p>
+            <p class="rating__point">4,5</p>
           </div>
           <div class="product-card__img-block">
             <picture>
@@ -435,9 +473,11 @@
             <span class="product-card__model">“С-80”</span>
           </div>
           <span class="product-card__price">20&nbsp;990 руб</span>
-          <button class="btn-reset btn product-card__btn">Купить</button>
-        </li>
-      </ul>
+          <div class="product-card__btn-block">
+            <button aria-label="Купить" class="btn-reset btn product-card__btn">Купить</button>
+          </div>
+        </div>
+      </div>
       <button id="js-show-more" class="btn-reset btn-revert btn-more">
         Смотреть больше товаров
       </button>
