--- a/src/pages/special.html
+++ b/src/pages/special.html
@@ -1,7 +1,7 @@
 <section class="special section-offset">
   <div class="container special__container">
     <h2 class="title-h2 special__title">Специальные предложения</h2>
-    <div class="swiper special__slider">
+    <div id="special-slider" class="swiper special__slider">
       <div class="swiper-wrapper">
         <!-- slide 1 (small block) -->
         <div class="swiper-slide swiper-slide--small">
@@ -14,20 +14,21 @@
           <picture>
             <source srcset="images/special_1.webp" type="image/webp" />
             <img
+              id="special-img-1"
               loading="lazy"
               src="images/special_1.png"
               alt="Кресло велюровое &laquo;X-24&raquo;"
               class="image special__img"
             />
           </picture>
-          <span class="special__product-title product-title"
-            >Кресло велюровое &laquo;X-24&raquo;</span
-          >
+          <span class="special__product-title product-title">Кресло велюровое "X-24"</span>
           <div class="special__price-block">
             <span class="special__price-actual">15&nbsp;990 руб</span>
             <span class="special__price-discount">24&nbsp;990 руб</span>
           </div>
-          <button class="btn-reset btn special__btn">Купить</button>
+          <a href="../product-page.html" aria-label="Купить" class="btn-reset btn special__btn"
+            >Купить</a
+          >
         </div>
         <!-- slide 2 (big block) -->
         <div class="swiper-slide swiper-slide--big">
@@ -40,6 +41,7 @@
           <picture>
             <source srcset="images/special_2.webp" type="image/webp" />
             <img
+              id="special-img-2"
               loading="lazy"
               src="images/special_2.png"
               alt="Диван тканевый &laquo;Z-44&raquo;"
@@ -49,20 +51,21 @@
 
           <div class="special__info-block">
             <div class="special__info">
-              <span class="special__product-title product-title"
-                >Диван тканевый &laquo;Z-44&raquo;</span
-              >
+              <span class="special__product-title product-title">Диван тканевый "Z-44"</span>
               <div class="special__price-block">
                 <span class="special__price-actual">22&nbsp;990 руб</span>
                 <span class="special__price-discount">32&nbsp;900 руб</span>
               </div>
-              <button class="btn-reset btn special__btn">Купить</button>
+              <a href="../product-page.html" aria-label="Купить" class="btn-reset btn special__btn"
+                >Купить</a
+              >
             </div>
             <picture>
-              <source srcset="images/special_plan_1.webp" type="image/webp" />
+              <source srcset="images/d31-plan_1.webp" type="image/webp" />
               <img
+                id="special-plan-img"
                 loading="lazy"
-                src="images/special_plan_1.png"
+                src="images/d31-plan_1.png"
                 alt='Схема дивана "вел-флок Z-85"'
                 class="image special__img special__plan-img"
               />
@@ -80,25 +83,26 @@
           <picture>
             <source srcset="images/special_3.webp" type="image/webp" />
             <img
+              id="special-img-3"
               loading="lazy"
               src="images/special_3.png"
               alt="Будильник &laquo;Quartz-23&raquo;"
               class="image special__img"
             />
           </picture>
-          <span class="special__product-title product-title"
-            >Будильник &laquo;Quartz-23&raquo;</span
-          >
+          <span class="special__product-title product-title">Будильник "Quartz-23"</span>
           <div class="special__price-block">
             <span class="special__price-actual">1&nbsp;290 руб</span>
             <span class="special__price-discount">1&nbsp;890 руб</span>
           </div>
-          <button class="btn-reset btn special__btn">Купить</button>
+          <a href="../product-page.html" aria-label="Купить" class="btn-reset btn special__btn"
+            >Купить</a
+          >
         </div>
         <!-- slide 4 (small block) -->
         <div class="swiper-slide swiper-slide--small">
           <div class="special__dicsount">
-            <span class="special__discount-price">&-&nbsp;300</span>
+            <span class="special__discount-price">-&nbsp;300</span>
             <svg width="92" height="34" class="special__icon">
               <use xlink:href="images/sprite.svg#special_discount"></use>
             </svg>
@@ -106,6 +110,7 @@
           <picture>
             <source srcset="images/special_4.webp" type="image/webp" />
             <img
+              id="special-img-4"
               loading="lazy"
               src="images/special_4.png"
               alt="Мини-скульптура &laquo;Oh&nbsp;my&nbsp;deer&raquo;"
@@ -113,13 +118,15 @@
             />
           </picture>
           <span class="special__product-title product-title"
-            >Мини-скульптура &laquo;Oh&nbsp;my&nbsp;deer&raquo;</span
+            >Мини-скульптура "Oh&nbsp;my&nbsp;deer"</span
           >
           <div class="special__price-block">
             <span class="special__price-actual">690 руб</span>
             <span class="special__price-discount">990 руб</span>
           </div>
-          <button class="btn-reset btn special__btn">Купить</button>
+          <a href="../product-page.html" aria-label="Купить" class="btn-reset btn special__btn"
+            >Купить</a
+          >
         </div>
         <!-- slide 5 (big block) -->
         <div class="swiper-slide swiper-slide--big">
@@ -132,6 +139,7 @@
           <picture>
             <source srcset="images/special_5.webp" type="image/webp" />
             <img
+              id="special-img-5"
               loading="lazy"
               src="images/special_5.png"
               alt="Диван вел-флок &laquo;Z-85&raquo;"
@@ -140,20 +148,21 @@
           </picture>
           <div class="special__info-block">
             <div class="special__info">
-              <span class="special__product-title product-title"
-                >Диван вел-флок &laquo;Z-85&raquo;</span
+              <span class="special__product-title special__product-title--word-wrap product-title"
+                >Диван вел-флок "Z-85"</span
               >
               <div class="special__price-block">
                 <span class="special__price-actual">22&nbsp;990 руб</span>
                 <span class="special__price-discount">32&nbsp;900 руб</span>
               </div>
-              <button class="btn-reset btn special__btn">Купить</button>
+              <a href="../product-page.html" class="btn-reset btn special__btn">Купить</a>
             </div>
             <picture>
-              <source srcset="images/special_plan_2.webp" type="image/webp" />
+              <source srcset="images/Z85-plan_2.webp" type="image/webp" />
               <img
+                id="special-plan-img-2"
                 loading="lazy"
-                src="images/special_plan_2.png"
+                src="images/Z85-plan_2.png"
                 alt='Схема дивана "вел-флок Z-85"'
                 class="image special__img special__plan-img"
               />
@@ -171,25 +180,74 @@
           <picture>
             <source srcset="images/special_6.webp" type="image/webp" />
             <img
+              id="special-img-6"
               loading="lazy"
               src="images/special_6.png"
               alt="Термометр + гидрометр &laquo;H-18&raquo;"
               class="image special__img"
             />
           </picture>
-          <span class="special__product-title product-title"
-            >Термометр + гидрометр &laquo;H-18&raquo;</span
-          >
+          <span class="special__product-title product-title">Термометр + гидрометр "H-18"</span>
           <div class="special__price-block">
             <span class="special__price-actual">1&nbsp;390 руб</span>
             <span class="special__price-discount">2&nbsp;090 руб</span>
           </div>
-          <button class="btn-reset btn special__btn">Купить</button>
+          <a href="../product-page.html" aria-label="Купить" class="btn-reset btn special__btn"
+            >Купить</a
+          >
         </div>
       </div>
     </div>
     <!-- navigation buttons -->
-    <div class="button-prev"></div>
-    <div class="button-next"></div>
+    <div
+      tabindex="0"
+      aria-label="Кнопка слайдера назад"
+      class="button-prev btn-slider special__nav-btn"
+    >
+      <svg
+        width="32"
+        height="32"
+        viewbox="0 0 32 32"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        class="special__nav-icon button-prev__svg"
+      >
+        <g clip-path="url(#clip0_663_1756)">
+          <path
+            d="M14 11L19 16L14 21"
+            stroke="var(--sliderBtn)"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <circle cx="16" cy="16" r="15" stroke="#A65CF0" stroke-width="2" />
+        </g>
+      </svg>
+    </div>
+    <div
+      tabindex="0"
+      aria-label="Кнопка слайдера вперед"
+      class="button-next btn-slider special__nav-btn"
+    >
+      <svg
+        width="32"
+        height="32"
+        viewbox="0 0 32 32"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        class="special__nav-icon button-next__svg"
+      >
+        <g clip-path="url(#clip0_663_1756)">
+          <path
+            d="M14 11L19 16L14 21"
+            stroke="var(--sliderBtn)"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <circle cx="16" cy="16" r="15" stroke="#A65CF0" stroke-width="2" />
+        </g>
+      </svg>
+    </div>
   </div>
 </section>
