--- a/src/pages/useful.html
+++ b/src/pages/useful.html
@@ -1,7 +1,7 @@
 <section class="useful section-offset">
   <div class="container">
     <h2 class="title-h2 useful__title">Полезное</h2>
-    <div class="swiper useful__slider">
+    <div id="useful-slider" class="swiper useful__slider">
       <div class="swiper-wrapper">
         <!-- slide 1 -->
         <div class="swiper-slide">
@@ -19,7 +19,7 @@
               И&nbsp;нет сомнений, что сделанные на&nbsp;базе интернет-аналитики выводы представляют
               собой не&nbsp;что иное?
             </p>
-            <button class="btn-reset btn useful__btn">Читать</button>
+            <button aria-label="Читать" class="btn-reset btn useful__btn">Читать</button>
           </div>
         </div>
 
@@ -38,7 +38,7 @@
             <p class="useful__text">
               Как принято считать, некоторые особенности приносят несомненную пользу обществу?
             </p>
-            <button class="btn-reset btn useful__btn">Читать</button>
+            <button aria-label="Читать" class="btn-reset btn useful__btn">Читать</button>
           </div>
         </div>
 
@@ -57,7 +57,7 @@
             <p class="useful__text">
               Ясность нашей позиции очевидна: укрепление и&nbsp;развитие внутренней структуры?
             </p>
-            <button class="btn-reset btn useful__btn">Читать</button>
+            <button aria-label="Читать" class="btn-reset btn useful__btn">Читать</button>
           </div>
         </div>
 
@@ -77,7 +77,7 @@
               Прежде всего, консультация с&nbsp;широким активом однозначно фиксирует необходимость
               распределения?
             </p>
-            <button class="btn-reset btn useful__btn">Читать</button>
+            <button aria-label="Читать" class="btn-reset btn useful__btn">Читать</button>
           </div>
         </div>
 
@@ -96,13 +96,55 @@
             <p class="useful__text">
               Как принято считать, некоторые особенности приносят несомненную пользу обществу?
             </p>
-            <button class="btn-reset btn useful__btn">Читать</button>
+            <button aria-label="Читать" class="btn-reset btn useful__btn">Читать</button>
           </div>
         </div>
       </div>
     </div>
-    <!-- navigation buttons -->
-    <div class="button-prev"></div>
-    <div class="button-next"></div>
+    <!-- navigation -->
+    <div tabindex="0" class="button-prev btn-slider useful__nav-btn">
+      <svg
+        width="32"
+        height="32"
+        viewbox="0 0 32 32"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        class="special__nav-icon button-prev__svg"
+      >
+        <g clip-path="url(#clip0_663_1756)">
+          <path
+            id="btn-slider"
+            d="M14 11L19 16L14 21"
+            stroke="var(--sliderBtn)"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <circle cx="16" cy="16" r="15" stroke="#A65CF0" stroke-width="2" />
+        </g>
+      </svg>
+    </div>
+
+    <div tabindex="0" class="button-next btn-slider useful__nav-btn">
+      <svg
+        width="32"
+        height="32"
+        viewbox="0 0 32 32"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        class="special__nav-icon button-prev__svg"
+      >
+        <g clip-path="url(#clip0_663_1756)">
+          <path
+            d="M14 11L19 16L14 21"
+            stroke="var(--sliderBtn)"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <circle cx="16" cy="16" r="15" stroke="#A65CF0" stroke-width="2" />
+        </g>
+      </svg>
+    </div>
   </div>
 </section>
